// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bash_tool - Snapshot Tests > renders bash command with empty output 1`] = `
"⚙ Run touch newfile.txt
  └─ Executed (exit 0)"
`;

exports[`bash_tool - Snapshot Tests > renders bash command with long multi-line output 1`] = `
"⚙ Run npm install
  │  ... (truncated)
  │  [27] Processing item 27...
  │  [28] Processing item 28...
  │  [29] Processing item 29...
  │  [30] Processing item 30...
  └─ Executed (exit 0)"
`;

exports[`bash_tool - Snapshot Tests > renders bash command with special characters in output 1`] = `
"⚙ Run npm test
  │  ✓ Tests passed
  │  ✗ 2 warnings
  │  🚀 Build complete
  │  Path: /usr/local/bin → ~/.local/bin
  └─ Executed (exit 0)"
`;

exports[`bash_tool - Snapshot Tests > renders streaming bash output matching result layout style 1`] = `
"⚙ Run ls -la at /Users/user/project
  │
  │
  │  total 64
  │  drwxr-xr-x  12 user  staff   384 Jan 31 10:00 src
  │  drwxr-xr-x   5 user  staff   160 Jan 31 10:00 tests
  └─ Running (3 lines) ..."
`;

exports[`bash_tool - Snapshot Tests > renders streaming bash output with bordered content 1`] = `
"⚙ Run npm test at /project
  │
  │
  │  line 1
  │  line 2
  │  line 3
  └─ Running (3 lines) ..."
`;

exports[`bash_tool - Snapshot Tests > renders successful bash command execution 1`] = `
"⚙ Run ls -la at /Users/user/project
  │  total 64
  │  drwxr-xr-x  12 user  staff   384 Jan 31 10:00 src
  │  drwxr-xr-x   5 user  staff   160 Jan 31 10:00 tests
  └─ Executed (exit 0)"
`;
